--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,22 @@
   <body>
     <div class="has-bg-img">
       <div class="bg-img bg-cover " id="background-img">
-        <%= render partial: "shared/navbar"  %>
-        <% if alert.present?%>
-          <%= render partial: "shared/flash", locals: {message: alert, css_class: "danger"} %>
+        <!-- Render the correct navbar based on current page -->
+        <% if controller_name == 'static' && action_name == 'index' %>
+          <%= render "shared/sticky_navbar"%>
+        <% else %>
+          <%= render "shared/fixed_navbar"%>
         <% end %>
-        <% if notice.present?%>
-          <%= render partial: "shared/flash", locals: {message: notice, css_class: "success"} %>
+
+        <!-- Render alerts and notices -->
+        <% if alert.present? %>
+          <%= render "shared/flash", locals: {message: alert, css_class: "danger"} %>
         <% end %>
+        <% if notice.present? %>
+          <%= render "shared/flash", locals: {message: notice, css_class: "success"} %>
+        <% end %>
+
+
         <%= yield %>
       </div>
     </div>
