--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -4,8 +4,10 @@
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
           <h1 class="display-4 fw-bold lh-1 mb-3">Highlighting the <br>
-            <span class="emphasized-low-word">(low)</span> price of beauty.</h1>
-          <p class="col-lg-10 fs-4"><span class="coming-soon">The Prettiest Price is coming soon! <br>
+            <span class="emphasized-low-word">(low)</span> price of beauty.
+          </h1>
+          <p class="col-lg-10 fs-4">
+            <span class="coming-soon">The Prettiest Price is coming soon! <br>
             </span>
             <span class="landing-page-copy">
               Join us on our mission to help shoppers find the best deals on all things beauty and personal care. Sign-up for the waitlist! 
@@ -15,6 +17,8 @@
 
         </div>
         <%= render partial: "waitlist_entries/form"%>
-      </section>
+      </div>
 
-    </main>
+    </div>
+  </section>
+</main>
