--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,16 +23,15 @@
           <%= render "shared/fixed_navbar"%>
         <% end %>
 
-        <!-- Render alerts and notices -->
-        <% if alert.present? %>
-          <%= render "shared/flash", locals: {message: alert, css_class: "danger"} %>
-        <% end %>
         <% if notice.present? %>
-          <%= render "shared/flash", locals: {message: notice, css_class: "success"} %>
+          <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" }%>
         <% end %>
-
+        <% if alert.present? %>
+          <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" }%>
+        <% end %>
 
         <%= yield %>
+
       </div>
     </div>
   </body>
