--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -1,15 +1,11 @@
-
 <nav class="navbar navbar-expand-lg navbar-light pt-3">
-  <a class="navbar-brand ms-3" href="/">
-    <img class="landing-page-logo"src="/images/tpp_logo_words_black_pink_2.png" width="200" height="50">
-  </a>
+  <%= link_to(image_tag("/images/tpp_logo_words_black_pink_2.png", size: "200x50", alt: "The Prettiest Price Logo", class: "navbar-brand ms-3"), "/" )%>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <!--<div class="navbar-nav">
-  
+    <div class="navbar-nav">
       <a class="nav-item nav-link" href="/">My Account</a>
-    </div>-->
+    </div>
   </div>
 </nav>
