--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/">My Account</a>
+      <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link"%>
     </div>
   </div>
 </nav>
