--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -6,10 +6,12 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link"%>
-      
+
       <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link"%>
 
       <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link"%>
+
+      <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link"%>
     </div>
   </div>
 </nav>
