--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -1,10 +1,15 @@
+<!-- TO DO 
+  1. Refactor all link items & forms
+  2. Update links to the correct paths
+
+-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <%= link_to(image_tag("/images/tpp_logo_words_black_pink_2.png", size: "200x50", alt: "The Prettiest Price Logo", class: "navbar-brand ms-3"), "/" )%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <%= link_to "Admin", rails_admin_path, class: "nav-link" %>
@@ -18,37 +23,39 @@
             <li><a class="dropdown-item" href="#">Personal Care</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Hot Deals</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Your Account & Faves
-          </a>
-          <ul class="dropdown-menu">
-            <li>
-              <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link" %>
-            </li>
-            <li>
-              <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link"%>
-            </li>
-            <li><hr class="dropdown-divider"></li>
-            <li>
-              <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link"%>
-            </li>
-            <li>
-              <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link"%>
-            </li>
-          </ul>
-        </li>
+          </li>
+        </ul>
       </ul>
-      
-      <!-- TO DO ADD SEARCH FUNCTIONALITY TO NAVBAR-->
-     <!-- <form class="d-flex" role="search">
+
+      <!-- Right-aligned navbar item-->
+      <div class="dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Your Account & Faves
+        </a>
+        <ul class="dropdown-menu dropdwon-menu-end" aria-labelledby="dropdownMenuLink">
+          <li>
+            <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link" %>
+          </li>
+          <li>
+            <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link"%>
+          </li>
+          <li><hr class="dropdown-divider"></li>
+          <li>
+            <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link"%>
+          </li>
+          <li>
+            <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link"%>
+          </li>
+        </ul>
+      </div>
+
+    </ul>
+
+    <!-- TO DO ADD SEARCH FUNCTIONALITY TO NAVBAR-->
+    <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>-->
-    </div>
   </div>
-</nav>
-
+</div>
 </nav>
