--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -28,23 +28,23 @@
       </ul>
 
       <!-- Right-aligned navbar item-->
-      <div class="dropdown">
+      <div class="dropdown mx-3">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Your Account & Faves
         </a>
         <ul class="dropdown-menu dropdwon-menu-end" aria-labelledby="dropdownMenuLink">
           <li>
-            <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link" %>
+            <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link mx-3" %>
           </li>
           <li>
-            <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link"%>
+            <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link mx-3"%>
           </li>
           <li><hr class="dropdown-divider"></li>
           <li>
-            <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link"%>
+            <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link mx-3"%>
           </li>
           <li>
-            <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link"%>
+            <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link mx-3"%>
           </li>
         </ul>
       </div>
