--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -11,9 +11,13 @@
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    
+    <!-- TO-DO: ADD REAL AUTHORIZATION-->
+    <% if current_user = @user && @user.admin == true %>
         <li class="nav-item">
           <%= link_to "Admin", rails_admin_path, class: "nav-link" %>
         </li>
+    <% end %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             All Categories
