--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -34,22 +34,30 @@
       <!-- Right-aligned navbar item-->
       <div class="dropdown mx-3">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Your Account & Faves
+          My Account & Faves
         </a>
         <ul class="dropdown-menu dropdwon-menu-end" aria-labelledby="dropdownMenuLink">
+        <% if user_signed_in? %>
+          <li>
+            <a class="nav-item nav-link mx-3" href="#">
+            My Faves
+            </a>
+          </li>
           <li>
             <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link mx-3" %>
           </li>
+          <li><hr class="dropdown-divider"></li>
           <li>
             <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link mx-3"%>
           </li>
-          <li><hr class="dropdown-divider"></li>
+          <% else %>
           <li>
             <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link mx-3"%>
           </li>
           <li>
             <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link mx-3"%>
           </li>
+          <% end %>
         </ul>
       </div>
 
