updated product partial to include product image_tag

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -11,8 +11,12 @@
 
   <p>
     <strong>Image:</strong>
-    <%= product.image %>
+    <%= image_tag("/assets/cerave_16oz_cropped", height: "", width: "") %>
   </p>
 
+   <p>
+    <strong>Product Volume:</strong>
+    <%= product.product_volume %>
+  </p>
  
 </div>
