updated image field on product partial

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -11,7 +11,8 @@
 
   <p>
     <strong>Image:</strong>
-    <%= image_tag("/assets/cerave_16oz_cropped", height: "", width: "") %>
+    <img src="<%= product.image %>">
+    
   </p>
 
    <p>
