added placeholder text for each retailer's price history chart

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,7 +33,7 @@
         </td>
 
         <td>
-         $Price Placeholder
+          $Price Placeholder
         </td>
       </tr>
     </table>
@@ -48,7 +48,16 @@
     Price History
   </h3>
   <p>
-    Snapshot Table Place holder
+    Amazon Chart Tab
+  </p>
+  <p>
+    Target Chart Tab
+  </p>
+  <p>
+    Ulta Chart Tab
+  </p>
+  <p>
+    Walmart
   </p>
 
   <div>
