added comment to remind me to remove test total price/snapshot chart

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -48,6 +48,7 @@
   <h3>
     Price History
   </h3>
+  <!--JUST WANTED TO TEST CHART/ TO BE REMOVED-->
   <%= line_chart snaps_by_day_snapshots_path %>
   <p>
     Amazon Chart Tab
