--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,6 +27,7 @@
       <td><%= product.description %></td>
       <td><%= product.image %></td>
       <td><%= product.product_volume%></td>
+      <td><%= link_to "View Product", product_path(product) %></td>
   </tr>
     <% end %>
 </table>
