re-ordered price history tabs & added additional current price table

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,8 +7,50 @@
   <h3>
     Prices
   </h3>
-
   <% @product.listings.each do |listing|%>
+    <table border=" 2px solid black">
+      <tr>
+        <th>
+        </th>
+        <th>
+          Retailer
+        </th>
+        <th>
+          Link to Retailer
+        </th>
+        <th>
+          Current Price
+        </th>
+      </tr>
+      <tr>
+        <td>
+          <img src="<%= listing.retailer.image%>" alt="<%=listing.retailer.name%> logo">
+        </td>
+        <td>
+          <%= listing.retailer.name %>
+        </td>
+
+        <td>
+          <a href="<%= listing.url %>">
+            Click here
+          </a>
+        </td>
+
+        <td>
+          $Price Placeholder
+        </td>
+      </tr>
+    <% end %>
+  </table>
+  <hr>
+
+  <h3>
+    Price History
+  </h3>
+  <% @product.listings.each do |listing|%>
+      <p>
+      <%= listing.retailer.name %> Chart Tab
+    </p>
     <table border=" 2px solid black">
       <tr>
         <th>
@@ -43,14 +85,8 @@
       </tr>
     </table>
 
-    <hr>
-    <h3>
-      Price History
-    </h3>
-    <!--JUST WANTED TO TEST CHART/ TO BE REMOVED-->
-    <p>
-      <%= listing.retailer.name %> Chart Tab
-    </p>
+
+
     <div>
       <%= line_chart snaps_by_day_snapshots_path({ listing_id: listing.id }) %>
     </div>
