created retailer-logo class to img tag

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <td>
-          <img src="<%= listing.retailer.image%>" alt="<%=listing.retailer.name%> logo">
+          <img src="<%= listing.retailer.image%>" class="retailer-logo" alt="<%=listing.retailer.name%> logo">
         </td>
         <td>
           <%= listing.retailer.name %>
@@ -67,7 +67,7 @@
       </tr>
       <tr>
         <td>
-          <img src="<%= listing.retailer.image%>" alt="<%=listing.retailer.name%> logo">
+          <img src="<%= listing.retailer.image%>" class="retailer-logo" alt="<%=listing.retailer.name%> logo">
         </td>
         <td>
           <%= listing.retailer.name %>
