added product info categories to the product info tab

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -56,6 +56,11 @@
       <h1>
         Prod Info
       </h1>
+      <p> Product Name </p>
+      <p> Brand </p>
+      <p> Product Volume <p>
+      <p> Category </p>
+      <p>Created at The Pretty Price</p>
     </div>
 
   </div>
