--- a/app/assets/stylesheets/custom_styles.css
+++ b/app/assets/stylesheets/custom_styles.css
@@ -7,7 +7,6 @@ body {
 }
 
 .main {
-
 }
 
 #background-img{
@@ -44,4 +43,19 @@ body {
   width: 250px;
   height: 100px
 
+}
+
+/* Style the Product Show Page */
+.product-name {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-size: 40px
+}
+
+.product-description {
+  font-size: 20px; 
+}
+
+.product-volume {
+  font-size: 20px;
 }
