--- a/app/views/shared/_cdn_assets.html.erb
+++ b/app/views/shared/_cdn_assets.html.erb
@@ -6,3 +6,7 @@
 
 <!-- Connect Font Awesome -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+<!-- Connect Google Roboto Font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
