--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,6 +7,9 @@
         </div>
 
         <div class="product-info-pane pt-5 mt-5 ps-lg-4 col-lg-5 col-12 order-lg-2 order-1">
+          <div class="product-brand">
+            <small><a href=""> Product Brand</a></small>
+          </div>
           <div class="product-name">
             <strong><%= product.name %></strong>
           </div>
