--- a/app/views/products/_tabcontent.html.erb
+++ b/app/views/products/_tabcontent.html.erb
@@ -1,62 +1,63 @@
 <div class="tab-content">
-    <div class="tab-pane active mb-3" id="current-prices" role="tabpanel" aria-labelledby="current-prices-tab" tabindex="0">
-      <% @product.listings.each do |listing|%>
-        <div class="card w-100 text-end">
-          <div class="row g-0">
-            <div class="mt-3 col-md-4">
-              <a href="<%=listing.url%>"><img src="<%= listing.retailer.image%>" class="img-fluid rounded-start retailer-logo" alt="<%=listing.retailer.name%> logo"></a>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">$<%= listing.snapshots.order(snapshot_date: :desc).first.price%></h5>
-                <p class="card-text"><a href="<%=listing.url%>">View Listing</a>  </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated <%= listing.snapshots.maximum(:snapshot_date).strftime("%D")%></small></p>
-              </div>
+  <!-- Current Prices Tab Content-->
+  <div class="tab-pane active mb-3" id="current-prices" role="tabpanel" aria-labelledby="current-prices-tab" tabindex="0">
+    <% @product.listings.each do |listing|%>
+      <div class="card w-100 text-end">
+        <div class="row g-0">
+          <div class="mt-3 col-md-4">
+            <a href="<%=listing.url%>"><img src="<%= listing.retailer.image%>" class="img-fluid rounded-start retailer-logo" alt="<%=listing.retailer.name%> logo"></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">$<%= listing.snapshots.order(snapshot_date: :desc).first.price%></h5>
+              <p class="card-text"><a href="<%=listing.url%>">View Listing</a>  </p>
+              <p class="card-text"><small class="text-body-secondary">Last updated <%= listing.snapshots.maximum(:snapshot_date).strftime("%D")%></small></p>
             </div>
           </div>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
+  </div>
 
-    <div class="tab-pane" id="price-history" role="tabpanel" aria-labelledby="price-history-tab" tabindex="0">
+  <!-- Price History Tab Content -->
+  <div class="tab-pane" id="price-history" role="tabpanel" aria-labelledby="price-history-tab" tabindex="0">
 
-      <div class="container mt-4">
-        <ul class="nav nav-fill nav-tabs" id="myTab" role="tablist">
-          <% @product.listings.each_with_index do |listing, index| %>
-            <li class="nav-item" role="presentation">
-              <button class="nav-link <%= index.zero? ? 'active' : '' %>" id="tab<%= index %>" data-bs-toggle="tab" data-bs-target="#graph<%= index %>" type="button" role="tab" aria-controls="graph<%= index %>" aria-selected="<%= index.zero? %>">
-                <%= listing.retailer.name %>
-              </button>
-            </li>
-          <% end %>
-        </ul>
-
-        <div class="tab-content mt-3" id="myTabContent">
-          <% @product.listings.each_with_index do |listing, index| %>
-            <div class="tab-pane fade <%= index.zero? ? 'show active' : '' %>" id="graph<%= index %>" role="tabpanel" aria-labelledby="tab<%= index %>">
-              <div class="card mt-3">
-                <div class="card-body">
-                  <h5 class="card-title"><%= listing.retailer.name %></h5>
-                  <%= line_chart snaps_by_day_snapshots_path({ listing_id: listing.id }), colors: ["#F84791", "#666"], xtitle: "Date", ytitle: "Price ($ USD)" %>
-                </div>
+    <div class="container mt-4">
+      <ul class="nav nav-fill nav-tabs" id="myTab" role="tablist">
+        <% @product.listings.each_with_index do |listing, index| %>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link <%= index.zero? ? 'active' : '' %>" id="tab<%= index %>" data-bs-toggle="tab" data-bs-target="#graph<%= index %>" type="button" role="tab" aria-controls="graph<%= index %>" aria-selected="<%= index.zero? %>">
+              <%= listing.retailer.name %>
+            </button>
+          </li>
+        <% end %>
+      </ul>
+      <div class="tab-content mt-3" id="myTabContent">
+        <% @product.listings.each_with_index do |listing, index| %>
+          <div class="tab-pane fade <%= index.zero? ? 'show active' : '' %>" id="graph<%= index %>" role="tabpanel" aria-labelledby="tab<%= index %>">
+            <div class="card mt-3">
+              <div class="card-body">
+                <h5 class="card-title"><%= listing.retailer.name %></h5>
+                <%= line_chart snaps_by_day_snapshots_path({ listing_id: listing.id }), colors: ["#F84791", "#666"], xtitle: "Date", ytitle: "Price ($ USD)" %>
               </div>
             </div>
-          <% end %>
-        </div>
+          </div>
+        <% end %>
       </div>
-
-    </div>
-
-    <div class="tab-pane" id="product-info" role="tabpanel" aria-labelledby="product-info-tab" tabindex="0">
-      <h1>
-        Prod Info
-      </h1>
-
-      <p> Product Name </p>
-      <p> Brand </p>
-      <p> Product Volume </p>
-      <p> Category </p>
-      <p>Created at The Pretty Price</p>
     </div>
 
   </div>
+  <!-- Product Info Tab Content-->
+  <div class="tab-pane" id="product-info" role="tabpanel" aria-labelledby="product-info-tab" tabindex="0">
+    <h1>
+      Prod Info
+    </h1>
+
+    <p> Product Name </p>
+    <p> Brand </p>
+    <p> Product Volume </p>
+    <p> Category </p>
+    <p>Created at The Pretty Price</p>
+  </div>
+
+</div>
