added product category to product info table

--- a/app/views/products/_tabcontent.html.erb
+++ b/app/views/products/_tabcontent.html.erb
@@ -49,15 +49,35 @@
   </div>
   <!-- Product Info Tab Content-->
   <div class="tab-pane" id="product-info" role="tabpanel" aria-labelledby="product-info-tab" tabindex="0">
-    <h1>
-      Prod Info
-    </h1>
+    <table class="product-info-table table table-hover table-striped">
+     
+      <tbody>
+        <tr>
+          <td>
+            Product Name
+          </td>
+          <td>
+            Name Place Holder
+          </td>
+        </tr>
+        <tr>
+          <td>Brand</td>
+          <td>Brand Place Holder</td>
+        </tr>
+        <tr>
+          <td>Product Volume</td>
+          <td>Volume Place Holder</td>
+        </tr>
+        <tr>
+          <td>Product Category</td>
+          <td>Category Place Holder</td>
+        </tr>
+        <tr>
+          <td>Created on the Prettiest Price</td>
+          <td>Created on Date</td>
+        </tr>
+        <tbody>
+        </table>
+      </div>
 
-    <p> Product Name </p>
-    <p> Brand </p>
-    <p> Product Volume </p>
-    <p> Category </p>
-    <p>Created at The Pretty Price</p>
-  </div>
-
-</div>
+    </div>
