--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,14 +7,14 @@
         </div>
 
         <div class="product-info-pane pt-5 mt-5 ps-lg-4 col-lg-5 col-12 order-lg-2 order-1">
-          <div class="product-brand">
+          <div class="product-brand mb-2">
             <small><a href=""> Product Brand</a></small>
           </div>
-          <div class="product-name">
+          <div class="product-name mb-3">
             <strong><%= product.name %></strong>
           </div>
 
-          <div class="product-description">
+          <div class="product-description mb-3">
             <strong>Description:</strong>
             <%= product.description %>
           </div>
