--- a/app/assets/stylesheets/custom_styles.css
+++ b/app/assets/stylesheets/custom_styles.css
@@ -59,3 +59,24 @@ body {
 .product-volume {
   font-size: 20px;
 }
+
+/* Style links
+/* unvisited link */
+/* a:link {
+  color: #F84791;
+} */
+
+/* visited link */
+/* a:visited {
+  color: #ff2f86;
+} */
+
+/* mouse over link */
+/* a:hover {
+  color: hotpink;
+} */
+
+/* selected link */
+/* a:active {
+  color:#F84791;
+} */ */
