--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,36 +1,24 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Products</h1>
-
-<table border="1">
-  <tr >
-    <th>
-      Product Name
-    </th>
-    <th>
-      Description
-    </th>
-    <th>
-      Image
-    </th>
-    <th>
-      Size/Volume
-    </th>
-    <th>
-      Show this product
-    </th>
-  </tr>
-
-  <% @products.each do |product| %>
-    <tr>
-      <td><%= product.name %></td>
-      <td><%= product.description %></td>
-      <td><%= product.image %></td>
-      <td><%= product.product_volume%></td>
-      <td><%= link_to "View Product", product_path(product) %></td>
-  </tr>
-    <% end %>
-</table>
+<div class="container">
+<h2>Products</h2>
+<% @products.each do |product| %>
+  <div class="card w-100 text-end">
+    <div class="row g-0">
+      <div class="mt-3 col-md-4">
+        <img src="<%= product.image %>" class="img-fluid rounded-start retailer-logo" alt="<%=product.name%> logo">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"> <%= product.name%></h5>
+          <p class="card-text"><a href="#"><%= product.brand %></a>  </p>
+          <p class="card-text"><small class="text-body-secondary"><%= product.category %></small></p>
+          <p class="card-text"><%= link_to "View Product", product_path(product) %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+</div>
 
 <!--<div id="products">
 
