--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title"> <%= product.name%></h5>
-          <p class="card-text"><a href="#"><%= product.brand %></a>  </p>
+          <p class="card-text"><%= product.brand %></p>
           <p class="card-text"><small class="text-body-secondary"><%= product.category %></small></p>
           <p class="card-text"><%= link_to "View Product", product_path(product) %></p>
         </div>
