added place holder link to product brand on show page

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,7 +8,7 @@
 
         <div class="product-info-pane pt-5 mt-5 ps-lg-4 col-lg-5 col-12 order-lg-2 order-1">
           <div class="product-brand mb-2">
-            <small><a href=""> Product Brand</a></small>
+            <small><a href="#"> <%= @product.brand %></a></small>
           </div>
           <div class="product-name mb-3">
             <strong><%= product.name %></strong>
