updated placeholder product brand & category data on product info table

--- a/app/views/products/_tabcontent.html.erb
+++ b/app/views/products/_tabcontent.html.erb
@@ -62,7 +62,7 @@
         </tr>
         <tr>
           <td><strong>Brand</strong></td>
-          <td>Brand Place Holder</td>
+          <td><%= @product.brand %></td>
         </tr>
         <tr>
           <td><strong>Product Volume</strong></td>
@@ -70,7 +70,7 @@
         </tr>
         <tr>
           <td><strong>Product Category</strong></td>
-          <td>Category Place Holder</td>
+          <td><%= @product.category %></td>
         </tr>
         <tr>
           <td><strong>Created on the Prettiest Price</strong></td>
