--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,32 +1,32 @@
 <p style="color: green"><%= notice %></p>
-<div class="container">
-<h2>Products</h2>
-<% @products.each do |product| %>
-  <div class="card w-100 text-end">
-    <div class="row g-0">
-      <div class="mt-3 col-md-4">
-        <img src="<%= product.image %>" class="img-fluid rounded-start retailer-logo" alt="<%=product.name%> logo">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title"> <%= product.name%></h5>
-          <p class="card-text"><%= product.brand %></p>
-          <p class="card-text"><%= link_to "View Product", product_path(product) %></p>
+<div class="container" style="max-width: 70%;">
+  <h2>Products</h2>
+
+  <% @products.each do |product| %>
+    <div class="card mb-3" style="max-width: 100%;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="<%= product.image %>" class="img-fluid rounded-start product-logo" alt="<%=product.name%> logo">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body text-end mt-4 me-3">
+            <h5 class="card-title"><%= product.name%></h5>
+            <p class="card-text"><%= product.brand %></p>
+            <p class="card-text"><%= link_to "View Product", product_path(product) %></p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-<% end %>
-</div>
-
-<!--<div id="products">
+  <% end %>
+ </div> 
+  <!--<div id="products">
 
   <%#= render product %>-->
-<!--  <p>-->
-<%#= link_to "Show this product", product %>
-<!--  </p>
+  <!--  <p>-->
+  <%#= link_to "Show this product", product %>
+  <!--  </p>
 
 </div>
 
 <%#= link_to "New product", new_product_path %>-->
-<!---->
+  <!---->
