updated image margin on product#index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
     <div class="card mb-3" style="max-width: 100%;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="<%= product.image %>" class="img-fluid rounded-start product-logo" alt="<%=product.name%> logo">
+          <img src="<%= product.image %>" class="ms-3 img-fluid rounded-start product-logo" alt="<%=product.name%> logo">
         </div>
         <div class="col-md-8">
           <div class="card-body text-end mt-4 me-3">
