--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 <div class="container" style="max-width: 70%;">
-  <h2>Products</h2>
+  <h2 class="product-page-heading mb-3">Products</h2>
 
   <% @products.each do |product| %>
     <div class="card mb-3" style="max-width: 100%;">
