--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -16,7 +16,7 @@
         <% end %>
       </div>
     <% end %>
-    <%= form.button 'Log in', class: 'w-100 mb-3 btn btn-lg', type: 'submit' %>
+    <%= form.button 'Log in', id: 'sign-in-button', class: 'w-100 mb-3 btn btn-lg', type: 'submit' %>
     <%= render "devise/shared/links" %>
   <% end %>
 </div>
