--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <% if controller_name == 'static' && action_name == 'index' %>
+    <% if controller_path == 'devise/sessions' && action_name == 'new' %>
       <div class="has-bg-img">
         <div class="bg-img bg-cover " id="background-img">
     <% end %>
