moved products cards to a partial & rendered partial

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,32 +1,5 @@
-
 <div class="container" style="max-width: 70%;">
   <h2 class="product-page-heading mb-3">Products</h2>
-
-  <% @products.each do |product| %>
-    <div class="card mb-3" style="max-width: 100%;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src="<%= product.image %>" class="ms-3 img-fluid rounded-start product-logo" alt="<%=product.name%> logo">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body text-end mt-4 me-3">
-            <h5 class="card-title"><%= product.name%></h5>
-            <p class="card-text"><%= product.brand %></p>
-            <p class="card-text"><%= link_to "View Product", product_path(product) %></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
- </div> 
-  <!--<div id="products">
-
-  <%#= render product %>-->
-  <!--  <p>-->
-  <%#= link_to "Show this product", product %>
-  <!--  </p>
+  <%= render "prod_index_card"%>
 
 </div>
-
-<%#= link_to "New product", new_product_path %>-->
-  <!---->
